objects/Multi_Property_Bundles__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MSA/Bundle Campaigns</relationshipLabel>
        <relationshipName>MSA_Bundle_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand_Page_Code__c</fullName>
        <label>Brand Page Code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand-MSA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Baymont Inn &amp; Suites</fullName>
                </value>
                <value>
                    <fullName>Best Western</fullName>
                </value>
                <value>
                    <fullName>Campanile</fullName>
                </value>
                <value>
                    <fullName>Candlewood Suites</fullName>
                </value>
                <value>
                    <fullName>Clarion</fullName>
                </value>
                <value>
                    <fullName>Comfort Inn</fullName>
                </value>
                <value>
                    <fullName>Comfort Suites</fullName>
                </value>
                <value>
                    <fullName>Country Inns &amp; Suites by Carlson</fullName>
                </value>
                <value>
                    <fullName>Courtyard</fullName>
                </value>
                <value>
                    <fullName>Crowne Plaza Hotels</fullName>
                </value>
                <value>
                    <fullName>CVBs</fullName>
                </value>
                <value>
                    <fullName>Days Inn</fullName>
                </value>
                <value>
                    <fullName>DoubleTree by Hilton</fullName>
                </value>
                <value>
                    <fullName>EconoLodge</fullName>
                </value>
                <value>
                    <fullName>Etap</fullName>
                </value>
                <value>
                    <fullName>Extended Stay America</fullName>
                </value>
                <value>
                    <fullName>Fairfield Inn</fullName>
                </value>
                <value>
                    <fullName>Formule 1</fullName>
                </value>
                <value>
                    <fullName>Hampton Inns &amp; Suites</fullName>
                </value>
                <value>
                    <fullName>Hilton Garden Inn</fullName>
                </value>
                <value>
                    <fullName>Hilton Hotels</fullName>
                </value>
                <value>
                    <fullName>Holiday Inn</fullName>
                </value>
                <value>
                    <fullName>Holiday Inn Express</fullName>
                </value>
                <value>
                    <fullName>Homewood Suites</fullName>
                </value>
                <value>
                    <fullName>Howard Johnson</fullName>
                </value>
                <value>
                    <fullName>Ibis</fullName>
                </value>
                <value>
                    <fullName>Ibis Budget</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>Knights Inn</fullName>
                </value>
                <value>
                    <fullName>La Quinta Inns</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bundle_Campaign_Total__c</fullName>
        <inlineHelpText>Represents the total value of the bundle contract. If there are multiple opportunities created for a bundle contract then this field should have combined value of all the opportunities.</inlineHelpText>
        <label>Bundle Campaign Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bundle_Type__c</fullName>
        <label>Bundle Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual Property</fullName>
                </value>
                <value>
                    <fullName>Multi Property</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSN_Tier__c</fullName>
        <formula>Text(Opportunity__r.Account.CSN_Tier__c)</formula>
        <label>CSN Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <label>Campaign Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chain_Affiliation_MSA__c</fullName>
        <label>Chain Affiliation-MSA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accor Hotels</fullName>
                </value>
                <value>
                    <fullName>Barcelo Hotels</fullName>
                </value>
                <value>
                    <fullName>Best Western</fullName>
                </value>
                <value>
                    <fullName>Carlson Rezidor Hotel Group</fullName>
                </value>
                <value>
                    <fullName>Choice Hotels</fullName>
                </value>
                <value>
                    <fullName>Corinthia Hotels</fullName>
                </value>
                <value>
                    <fullName>De Vere Group</fullName>
                </value>
                <value>
                    <fullName>Drury Hotels</fullName>
                </value>
                <value>
                    <fullName>Eurostars</fullName>
                </value>
                <value>
                    <fullName>Extended Stay America</fullName>
                </value>
                <value>
                    <fullName>Four Seasons</fullName>
                </value>
                <value>
                    <fullName>FRHI - Fairmont Raffles Hotels International</fullName>
                </value>
                <value>
                    <fullName>Hampshire Hotels</fullName>
                </value>
                <value>
                    <fullName>Hilton Worldwide</fullName>
                </value>
                <value>
                    <fullName>HUSA Hoteles</fullName>
                </value>
                <value>
                    <fullName>Hyatt Hotels</fullName>
                </value>
                <value>
                    <fullName>Iberostar Hotels</fullName>
                </value>
                <value>
                    <fullName>Independent / Other</fullName>
                </value>
                <value>
                    <fullName>InterContinental Hotels Group</fullName>
                </value>
                <value>
                    <fullName>Jal Hotels</fullName>
                </value>
                <value>
                    <fullName>Jin Jiang Hotels</fullName>
                </value>
                <value>
                    <fullName>Kempinski Hotels</fullName>
                </value>
                <value>
                    <fullName>Kimpton Hotels</fullName>
                </value>
                <value>
                    <fullName>La Quinta Hotels</fullName>
                </value>
                <value>
                    <fullName>Leonardo Hotels</fullName>
                </value>
                <value>
                    <fullName>Louvre Hotels Group</fullName>
                </value>
                <value>
                    <fullName>Maritim Hotels</fullName>
                </value>
                <value>
                    <fullName>Marriott Hotels</fullName>
                </value>
                <value>
                    <fullName>Melia Hotels International</fullName>
                </value>
                <value>
                    <fullName>Millennium Hotels</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chain_Affiliation_del__c</fullName>
        <formula>Opportunity__r.Account.Chain_Affiliation__c</formula>
        <label>Chain Affiliation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Received__c</fullName>
        <label>Contract Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Signer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Signer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>CSN_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Total__c</fullName>
        <formula>Opportunity__r.New_Contract_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSA_Code__c</fullName>
        <displayFormat>MSA-{000000}</displayFormat>
        <label>MSA Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>MSA_Total__c</fullName>
        <label>MSA Total</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Management_Company__c</fullName>
        <label>Management Company-MSA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accor Hotels</fullName>
                </value>
                <value>
                    <fullName>Aimbridge Hospitality</fullName>
                </value>
                <value>
                    <fullName>Altific Hotels</fullName>
                </value>
                <value>
                    <fullName>Baywood Hotels</fullName>
                </value>
                <value>
                    <fullName>Bespoke Hotels</fullName>
                </value>
                <value>
                    <fullName>Blue Diamond Hotels and Resorts</fullName>
                </value>
                <value>
                    <fullName>Champion Hotels</fullName>
                </value>
                <value>
                    <fullName>ClubCorp</fullName>
                </value>
                <value>
                    <fullName>Columbia Sussex</fullName>
                </value>
                <value>
                    <fullName>Concord Hospitality Enterprises Company</fullName>
                </value>
                <value>
                    <fullName>Crescent Hotels &amp; Resorts</fullName>
                </value>
                <value>
                    <fullName>Diamond Resorts International</fullName>
                </value>
                <value>
                    <fullName>First Hospitality Group</fullName>
                </value>
                <value>
                    <fullName>Fraser Hospitality</fullName>
                </value>
                <value>
                    <fullName>Gateway Hospitality Group</fullName>
                </value>
                <value>
                    <fullName>GF Management</fullName>
                </value>
                <value>
                    <fullName>GHL HOTELES</fullName>
                </value>
                <value>
                    <fullName>Global Spectrum</fullName>
                </value>
                <value>
                    <fullName>Grand City Hotels</fullName>
                </value>
                <value>
                    <fullName>Hersha Hospitality Management</fullName>
                </value>
                <value>
                    <fullName>Hershey Entertainment &amp; Resorts Company</fullName>
                </value>
                <value>
                    <fullName>Highgate Hotels</fullName>
                </value>
                <value>
                    <fullName>Hilton Worldwide</fullName>
                </value>
                <value>
                    <fullName>Hyatt Hotels</fullName>
                </value>
                <value>
                    <fullName>InterMountain Management, LLC</fullName>
                </value>
                <value>
                    <fullName>Interstate Hotels &amp; Resorts</fullName>
                </value>
                <value>
                    <fullName>Island Hospitality Management</fullName>
                </value>
                <value>
                    <fullName>Jinling Hotels &amp; Resorts</fullName>
                </value>
                <value>
                    <fullName>John Q Hammons Hotels &amp; Resorts</fullName>
                </value>
                <value>
                    <fullName>Kinseth Hospitality Companies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metro_Area__c</fullName>
        <formula>Text(Opportunity__r.Account.MetroArea__c)</formula>
        <label>Metro Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>CSN_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaskCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whenever a Task is created for this MSACode on a Account through "TaskAssignAutomationTrgHelper" then this checbox is checked and no other task will be created automatically for this particular MSACode.</description>
        <label>TaskCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Properties__c</fullName>
        <label># of Properties</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MSA/Bundle Campaigns</label>
    <nameField>
        <label>test name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MSA/Bundle Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_Bundles</fullName>
        <columns>NAME</columns>
        <columns>Chain_Affiliation_del__c</columns>
        <columns>Bundle_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Bundles</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Individual_Property_Bundle_Campaigns</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Campaign_Account__c</columns>
        <columns>Bundle_Type__c</columns>
        <columns>CSN_Tier__c</columns>
        <columns>Metro_Area__c</columns>
        <columns>Chain_Affiliation_del__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bundle_Type__c</field>
            <operation>equals</operation>
            <value>Individual Property</value>
        </filters>
        <label>Individual Property Bundle Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Multi_Property_Bundle_Campaigns</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Campaign_Account__c</columns>
        <columns>Bundle_Type__c</columns>
        <columns>CSN_Tier__c</columns>
        <columns>Metro_Area__c</columns>
        <columns>Chain_Affiliation_del__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bundle_Type__c</field>
            <operation>notEqual</operation>
            <value>Individual Property</value>
        </filters>
        <label>Multi Property Bundle Campaigns</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>MSA</fullName>
        <active>true</active>
        <description>For showing opportunites related</description>
        <label>MSA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Multi_Property_Bundle</fullName>
        <active>true</active>
        <description>Contains Old Layout showing account related list</description>
        <label>Multi Property Bundle</label>
    </recordTypes>
    <validationRules>
        <fullName>Multi_Property_Bundle_Editing</fullName>
        <active>true</active>
        <description>No one can edit Multi Property Bundle field.</description>
        <errorConditionFormula>AND(
ISCHANGED(Name),
NOT(OR( $User.ProfileId ="00e00000006qrD8",$User.ProfileId ="00e00000006qrD3")) 
)</errorConditionFormula>
        <errorMessage>You are not authorized to update this field. Please send an email to contracts@cvent.com.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Multi_Property_Bundle_Owner_Field</fullName>
        <active>true</active>
        <description>No one can change Owner of Multi Property Bundle field.</description>
        <errorConditionFormula>AND(
ISCHANGED(OwnerId),
NOT(OR( $User.ProfileId ="00e00000006qrD8",$User.ProfileId ="00e00000006qrD3"))
)</errorConditionFormula>
        <errorMessage>You are not authorized to change the Ownership. Please send an email to contracts@cvent.com.</errorMessage>
    </validationRules>
</CustomObject>